--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,22 +1,17 @@
-<%= form_for(@question) do |f| %>
-  <% if @question.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
-
-      <ul>
-      <% @question.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
+<div class="panel panel-default devise-bs">
+  <div class="panel-heading">
+    <h4>Question</h4>
   </div>
-  <%= f.select :test_id, Test.all.collect { |p| [ "#{p.subject} #{p.part}", p.id ] }, include_blank: false %>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="panel-body">
+    <%= form_for(@question) do |f| %>
+      <div class="field">
+        <%= f.label :body %><br>
+        <%= f.text_area :body, class: "form-control" %>
+      </div>
+      <%= f.select :test_id, Test.all.collect { |p| [ "#{p.subject} #{p.part}", p.id ] }, include_blank: false %>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
