--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,16 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @question.body %>
-</p>
-
-<p>
-  <strong>Test:</strong>
-  <%= @question.test %>
-</p>
-
-<%= render @question.answers %>
+<div class="panel panel-default">
+  <div class="panel-heading"><%= @question.body %></div>
+  <div class="panel-body">
+    <%= render @question.answers %>
+  </div>
+</div>
 <%= render "answers/form" %>
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
