--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,23 +1,15 @@
-<p id="notice"><%= notice %></p>
+<h3><%= @test.subject %> <%= @test.part %></h3>
 
-<p>
-  <strong>Subject:</strong>
-  <%= @test.subject %>
-</p>
-
-<p>
-  <strong>Part:</strong>
-  <%= @test.part %>
-</p>
-
-
-  <% @test.questions.each do |q| %>
-    <%= q.body %>
-    <% q.answers.each do |a| %>
-      <br><%= a.body %>
-    <% end %>
-  <% end %>
-</p>
+<% @test.questions.each do |q| %>
+  <div class="panel panel-default">
+    <div class="panel-heading"><%= q.body %></div>
+    <div class="panel-body">
+      <% q.answers.each.with_index do |a, index| %>
+        <%= index+1 %> <%= a.body %><br>
+      <% end %>
+    </div>
+  </div>
+<% end %>
 
 <%= link_to 'Add question', new_question_path %>
 <%= link_to 'Back', tests_path %>
