--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="container-fluid bg-1 text-center">
+  <h3><%= link_to "Tests", tests_path %></h3>
+</div>
