--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -4,5 +4,5 @@
     <%= link_to "#{test.subject} #{test.part}", test, class: "btn btn-default" %>
 <% end %>
 
-<%= link_to 'New Test', new_test_path, class: "btn btn-default" %>
+<%= link_to 'New Test', new_test_path, class: "btn btn-primary" %>
 </div>
