--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,14 +1,17 @@
 <div class="panel panel-default devise-bs">
   <div class="panel-heading">
-    <h4>Question</h4>
+    <h4><%= t(".question") %></h4>
   </div>
   <div class="panel-body">
     <%= form_for(@question) do |f| %>
       <div class="field">
-        <%= f.label :body %><br>
+        <%= f.label :body %>
         <%= f.text_area :body, class: "form-control" %>
       </div>
-      <%= f.select :test_id, Test.all.collect { |p| [ "#{p.subject} #{p.part}", p.id ] }, include_blank: false %>
+      <div class="field">
+        <%= f.label :test_id %>
+        <%= f.select :test_id, Test.all.collect { |p| [ "#{p.subject} #{p.part}", p.id ] }, include_blank: false %>
+      </div>
       <div class="actions">
         <%= f.submit %>
       </div>
