--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,8 +1,7 @@
-<h1>Listing Tests</h1>
-<div class="btn-group-vertical" role="group" aria-label="...">
+<div class="btn btn-block btn-group-vertical" role="group" aria-label="...">
 <% @tests.each do |test| %>
     <%= link_to "#{test.subject} #{test.part}", test, class: "btn btn-default" %>
 <% end %>
 
-<%= link_to 'New Test', new_test_path, class: "btn btn-primary" %>
+<%= link_to t("new"), new_test_path, class: "btn btn-primary" %>
 </div>
