--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,5 +1,7 @@
 <%= answer.body %>
-<%= link_to [answer.question, answer], class: "Delete", method: :delete do %>
-  Delete<br>
+  <% if can? :destroy, answer %>
+  <%= link_to [answer.question, answer], class: "Delete", method: :delete do %>
+    <%= t("destroy") %><br>
+  <% end %>  
 <% end %>
  
