--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Question</h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Show', @question %> |
-<%= link_to 'Back', questions_path %>
+<%= link_to t("show"), @question %> |
+<%= link_to t("back"), tests_path %>
