--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -5,6 +5,8 @@
   </div>
 </div>
 <%= render "answers/form" %>
+<% if can? :edit, @question %>
+  <%= link_to t("edit"), edit_question_path(@question) %> |
+<% end%>
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
-<%= link_to 'Back', questions_path %>
+<%= link_to t("back"), test_path(@question.test) %>
