--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -1,6 +1,5 @@
 <div class="panel panel-default devise-bs">
   <div class="panel-heading">
-    <h4>Test</h4>
   </div>
   <div class="panel-body">
     <%= form_for(@test) do |f| %>
@@ -10,7 +9,7 @@
       </div>
       <div class="form-group">
         <%= f.label :part %><br>
-        <%= f.number_field :part, class: "form-control" %>
+        <%= f.select(:part, options_for_select(1..4)) %>
       </div>
       <div class="actions">
         <%= f.submit %>
