--- a/app/views/tests/edit.html.erb
+++ b/app/views/tests/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @test %> |
-<%= link_to 'Back', tests_path %>
+<%= link_to t("show"), @test %> |
+<%= link_to t("back"), tests_path %>
