--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Test</h1>
+<h1><%= t(".new") %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tests_path %>
+<%= link_to t("back"), tests_path %>
