--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -2,7 +2,11 @@
 
 <% @test.questions.each do |q| %>
   <div class="panel panel-default">
-    <div class="panel-heading"><%= q.body %></div>
+    <div class="panel-heading"><%= link_to q.body, q %>
+    <% if can? :destroy, @test %> 
+      <%= link_to t("destroy"), q, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% end %>
+    </div>
     <div class="panel-body">
       <% q.answers.each.with_index do |a, index| %>
         <%= index+1 %> <%= a.body %><br>
@@ -11,5 +15,8 @@
   </div>
 <% end %>
 
-<%= link_to 'Add question', new_question_path %>
-<%= link_to 'Back', tests_path %>
+<%= link_to t("add"), new_question_path %>
+<%= link_to t("back"), tests_path %>
+<% if can? :destroy, @test %> 
+  <%= link_to t("destroy"), @test, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
