--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <div class="container-fluid bg-1 text-center">
-  <h3><%= link_to "Tests", tests_path %></h3>
+  <h3><%= link_to t(".tests"), tests_path %></h3>
 </div>
