--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,7 +9,11 @@
     </div>
     <div class="panel-body">
       <% question.answers.each.with_index do |answer, index| %>
-        <%= index+1 %> <%= answer.body %><br>
+        <% if answer.correctly? %>
+          <p class="correct"><%= index+1 %> <%= answer.body %></p>
+        <% else %>
+          <p><%= index+1 %> 1 <%= answer.body %></p>
+        <% end %>
       <% end %>
     </div>
   </div>
