--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -9,7 +9,11 @@
     </div>
     <div class="panel-body">
       <% q.answers.each.with_index do |a, index| %>
-        <%= index+1 %> <%= a.body %><br>
+        <% if a.correctly? %>
+          <p class="correct"><%= index+1 %> <%= a.body %></p>
+        <% else %>
+          <p><%= index+1 %> <%= a.body %></p>
+        <% end %>
       <% end %>
     </div>
   </div>
